fix: pequeno ajuste em index.html

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 </html>
 <script>
 function abrir() {
+	console.log("teste")
 	usuario = document.getElementById('usr').value;
 	if (usuario == ''){
 		window.location.href='msg.html';
